--- a/example/client/test.yaml
+++ b/example/client/test.yaml
@@ -2,13 +2,18 @@
    "apiVersion": "v1",
    "items": [
       {
-         "apiVersion": "extensions/v1beta1",
+         "apiVersion": "apps/v1",
          "kind": "Deployment",
          "metadata": {
             "name": "redis-test"
          },
          "spec": {
-            "replicas": 3,
+            "replicas": 1,
+            "selector": {
+               "matchLabels": {
+                  "app": "redis-test"
+               }
+            },
             "template": {
                "metadata": {
                   "labels": {
@@ -18,6 +23,12 @@
                "spec": {
                   "containers": [
                      {
+                        "env": [
+                           {
+                              "name": "DEBUG",
+                              "value": "ioredis:connection"
+                           }
+                        ],
                         "image": "falfaro/redis_test:latest",
                         "imagePullPolicy": "Always",
                         "name": "redis-test"
