--- a/example/operator/all-redis-operator-resources.yaml
+++ b/example/operator/all-redis-operator-resources.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       serviceAccountName: redisoperator
       containers:
-        - image: quay.io/spotahome/redis-operator:latest
+        - image: falfaro/redis-operator:latest
           imagePullPolicy: IfNotPresent
           name: app
           securityContext:
@@ -45,7 +45,7 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: redisoperator
-    namespace: default
+    namespace: felipe
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
