--- a/example/operator/all-redis-operator-resources.yaml
+++ b/example/operator/all-redis-operator-resources.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       serviceAccountName: redisoperator
       containers:
-        - image: falfaro/redis-operator:latest
+        - image: quay.io/spotahome/redis-operator:v1.0.0
           imagePullPolicy: IfNotPresent
           name: app
           securityContext:
