--- a/example/operator/operator.yaml
+++ b/example/operator/operator.yaml
@@ -18,8 +18,8 @@ spec:
     spec:
       serviceAccountName: redisoperator
       containers:
-        - image: quay.io/spotahome/redis-operator:latest
-          imagePullPolicy: IfNotPresent
+        - image: falfaro/redis-operator:mymaster
+          imagePullPolicy: Always
           name: app
           securityContext:
             readOnlyRootFilesystem: true
