--- a/example/client/Makefile
+++ b/example/client/Makefile
@@ -5,14 +5,14 @@ test.yaml: test.jsonnet
 	jsonnet -J vendor/ test.jsonnet > test.yaml
 
 apply: test.yaml
-	kubectl apply -f test.yaml
+	kubectl -n felipe apply -f test.yaml
 
 delete: test.yaml
-	kubectl delete -f test.yaml
+	kubectl -n felipe delete -f test.yaml
 
 logs: apply
-	kubectl wait --for=condition=available --timeout=600s deployment/redis-test
-	kubectl logs -f -l app=redis-test
+	kubectl -n felipe wait --for=condition=available --timeout=600s deployment/redis-test
+	kubectl -n felipe logs -f -l app=redis-test
 
 image: Dockerfile
 	docker build -t falfaro/redis_test .
