--- a/example/operator/all-redis-operator-resources.yaml
+++ b/example/operator/all-redis-operator-resources.yaml
@@ -4,6 +4,7 @@ metadata:
   labels:
     app: redisoperator
   name: redisoperator
+  namespace: felipe
 spec:
   replicas: 1
   selector:
@@ -38,6 +39,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: redisoperator
+  namespace: felipe
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
@@ -51,6 +53,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: redisoperator
+  namespace: felipe
 rules:
   - apiGroups:
       - databases.spotahome.com
@@ -98,3 +101,4 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: redisoperator
+  namespace: felipe
