--- a/example/operator/rolebinding.yaml
+++ b/example/operator/rolebinding.yaml
@@ -2,6 +2,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: redisoperator
+  namespace: felipe
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
