--- a/example/operator/roles.yaml
+++ b/example/operator/roles.yaml
@@ -2,6 +2,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: redisoperator
+  namespace: felipe
 rules:
   - apiGroups:
       - databases.spotahome.com
